# assigment-2

./: .dockerignore  .env.db  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: routers.py  settings.py  urls.py
nginx/: nginx.conf
users/: constants.py  models.py  permissions.py  views.py
users/admin/: __init__.py  custom_user_admin.py  patient_admin.py
users/management/commands/: create_default_admin.py
users/migrations/: 0001_initial.py
users/models/: __init__.py  custom_user_model.py  patient_model.py
users/serializers/: __init__.py  login_serializer.py  patient_serializer.py  register_serializer.py
users/tests/: factories.py  test_custom_user.py  test_patient_api.py  test_user_api.py
