[tool.poetry]
name = "assigment-2"
version = "0.1.0"
description = ""
authors = ["Aziza <azizamukashkyzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-debug-toolbar = "^5.0.1"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
